--- a/src/lugares-interes.html
+++ b/src/lugares-interes.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/estilos.css">
+    <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
   </head>
   <body>
     <!-- Cabecera -->
@@ -46,13 +47,17 @@
         <ul id="listaLugares">
           <li>
             <a href="puente-medieval.html">Puente medieval
-              <img src="img/puente-2022.jpeg" alt="Imagen del puente medieval de St. Ives">
+              <img srcset="./img/destacadas/webp/puente-480w.webp,
+              ./img/destacadas/webp/puente-600w.webp 1.5x,
+              ./img/destacadas/webp/puente-800w.webp 2x"
+     src="./img/destacadas/webp/puente-800w.webp" alt="Imagen del puente medieval de St. Ives">
+              <!-- <img src="img/destacadas/webp/puente-800w.webp" alt="Imagen del puente medieval de St. Ives"> -->
             </a>
             
           </li>
           <li>
             <a href="estatua-oliver-cromwell.html">Estatua de <span lang="en">Oliver Cromwell</span>
-              <img src="img/estatua-cromwell.jpeg" alt="Imagen de la estatua de Oliver Cromwell">
+              <img src="img/destacadas/webp/estatua-cromwell-800w.webp" alt="Imagen de la estatua de Oliver Cromwell">
             </a>
           </li>
           <li>
