--- a/src/presentacion.html
+++ b/src/presentacion.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/estilos.css">
-
+    <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
   </head>
 
   <body>
@@ -38,8 +38,9 @@
     <!-- Contenido de la página -->
     <main class="container">
       <!-- Artículo -->
-      <article>
+      <article id="presentacion">
         <h2>Presentación</h2>
+        <figure><img class="logoAnimado" src="./img/escudo_st_ives.svg" alt="Escudo St. Ives"></figure>
         <p>
           <span lang="en">St. Ives</span> es una pintoresca ciudad situada en el Condado en <span lang="en">Cambridgeshire</span>, Inglaterra, 5 millas (8 km) al este de <span>Huntingdon</span> y 
           12 millas (19 km) al noroeste de <span lang="en">Cambridge</span>. Destaca por su increíble entorno natural y su importante papel comercial en la historia de Inglaterra. Aunque no es
