--- a/src/reserva-isla-holt.html
+++ b/src/reserva-isla-holt.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/estilos.css">
-
+    <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
   </head>
   <body>
     <!-- Cabecera -->
@@ -48,7 +48,12 @@
         </ul>
         <h2 class="textoCentrado">Reserva Natural de <span lang="en">Holt Island</span></h2>
         <figure>
-          <img src="img/puente-holt-island.jpeg" alt="Foto de la entrada a la Reserva Natural de Holt Island">
+          <picture>
+            <source media="(max-width: 480px)" srcset="./img/destacadas/webp/puente-holt-island-400w.webp">
+            <source media="(max-width: 768px)" srcset="./img/destacadas/webp/puente-holt-island-600w.webp">
+            <source media="(min-width: 769px)" srcset="./img/destacadas/webp/puente-holt-island-800w.webp">
+            <img src="./img/destacadas/jpeg/puente-holt-island.jpeg" alt="Foto de la entrada a la Reserva Natural de Holt Island">
+          </picture>
           <figcaption>Entrada a la Reserva Natural de <span lang="en">Holt Island</span></figcaption>
         </figure>
         <p>
