--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/estilos.css">
-
+    <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
   </head>
 
   <body id="imgInicio">
@@ -18,11 +18,12 @@
     <header>
         <div class="container">
             <div>
-            <a href="index.html">
+              <a href="index.html" class="logo-link">
+                <img src="./img/logo.svg" alt="Logo de St. Ives" class="logo-img">
                 <h1 class="banner" lang="en">
                   <span>St. Ives</span> The Old Riverport
                 </h1>
-            </a>
+              </a>
             </div>
             <!-- Menú -->
             <nav>
@@ -41,15 +42,24 @@
           <h2>¡Conoce <span lang="en">St. Ives</span>!</h2>
           <h3>Situada en el Condado de <span lang="en">Cambridgeshire</span>, esta encantadora ciudad es conocida por su rica historia, sus festivales culturales y su impresionante entorno natural. 
           </h3>
+          <figure><img src="./img/puente-cisnes.jpg" alt="Puente de St. Ises"></figure>
         </div>
               
     </main>
 
     <!-- Footer -->
     <footer class="textoCentrado">
-      <p>Herramientas HTML y CSS</p>
-      <p>Actividad realizada por Sergio Forja Barriga</p>
-      <a href="https://www.uoc.edu/portal/es/index.html" target="_blank"><img src="img/uoc.png" alt="Logo de la UOC"></a>
+      <ul>
+        <li><a href="presentacion.html">Presentación</a></li>
+        <li><a href="lugares-interes.html">Lugares de interés</a></li>
+        <li><a href="enlaces.html">Enlaces</a></li>
+      </ul>
+      <div>
+        <p>Herramientas HTML y CSS</p>
+        <p>Actividad realizada por Sergio Forja Barriga</p>
+        <a href="https://www.uoc.edu/portal/es/index.html" target="_blank"><img src="img/uoc.png" alt="Logo de la UOC"></a>
+      </div>
+      
     </footer>
   </body>
 </html>
