Se terminan de añadir imágenes con sus respectivas técnicas responsive

--- a/src/iglesia-parroquial.html
+++ b/src/iglesia-parroquial.html
@@ -76,6 +76,26 @@
             del presbiterio se elevaron a su altura actual y se insertaron nuevas ventanas. La torre con su chapitel probablemente se agregó recientemente a la iglesia y las naves laterales 
             se extendieron hasta su cara occidental. La iglesia, por lo tanto, es considerada como construida en el siglo XV.
         </p>
+        <div id="imgInternas">
+          <figure>
+            <img
+            srcset="./img/internas/iglesia-1-150w.jpeg 150w, ./img/internas/iglesia-1-225w.jpeg 225w, ./img/internas/iglesia-1-350w.jpeg 350w"
+            sizes="(max-width: 480px) 150px,
+                  (max-width: 768px) 225px,
+                  350px"
+            alt="Foto del interior de la iglesia" />
+            <figcaption>Foto del interior de la iglesia</figcaption>
+          </figure>
+          <figure>
+            <img
+            srcset="./img/internas/iglesia-2-150w.jpeg 150w, ./img/internas/iglesia-2-225w.jpeg 225w, ./img/internas/iglesia-2-350w.jpeg 350w"
+            sizes="(max-width: 480px) 150px,
+                  (max-width: 768px) 225px,
+                  350px"
+            alt="Acceso al recinto de la iglesia" />
+            <figcaption>Acceso al recinto de la iglesia</figcaption>
+          </figure>          
+        </div>
       </article>
     </main>
 
