--- a/src/reserva-isla-holt.html
+++ b/src/reserva-isla-holt.html
@@ -73,6 +73,26 @@
             que los visitantes experimenten la vida silvestre de cerca, mientras disfrutan de un agradable paseo o picnic en un entorno 
             tranquilo y natural.
         </p>
+        <div id="imgInternas">
+          <figure>
+            <img
+            srcset="./img/internas/holt-island-1-150w.jpeg 150w, ./img/internas/holt-island-1-225w.jpeg 225w, ./img/internas/holt-island-1-350w.jpeg 350w"
+            sizes="(max-width: 480px) 150px,
+                  (max-width: 768px) 225px,
+                  350px"
+            alt="Imagen de una garza" />
+            <figcaption>Imagen de una garza</figcaption>
+          </figure>
+          <figure>
+            <img
+            srcset="./img/internas/holt-island-2-150w.jpeg 150w, ./img/internas/holt-island-2-225w.jpeg 225w, ./img/internas/holt-island-2-350w.jpeg 350w"
+            sizes="(max-width: 480px) 150px,
+                  (max-width: 768px) 225px,
+                  350px"
+            alt="Foto de un zorro" />
+            <figcaption>Foto de un zorro</figcaption>
+          </figure>          
+        </div>
         <p>En el siguiente vídeo puede realizar un tour express por la reserva:</p>
         <figure>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/bURCbzLaXMU" title="YouTube video player" 
