--- a/src/lugares-interes.html
+++ b/src/lugares-interes.html
@@ -40,44 +40,78 @@
       <article>
         <h2>Lugares de interés</h2>
         <figure>
-          <img src="img/the-quay.jpg" alt="Imagen del paseo The Quay">
+          <img
+            srcset="./img/miniaturas/the-quay-600w.webp, ./img/miniaturas/the-quay-800w.webp 2x"
+            src="./img/miniaturas/the-quay-800w.jpeg"
+            alt="Imagen del paseo The Quay" />
           <figcaption>Paseo <span lang="en">"The Quay"</span>, junto al río</figcaption>
         </figure>
         <p>A continuación dispone de un listado con los lugares más pintorescos de <span lang="en">St. Ives</span>. Para conocer más acerca de ellos, pulse en el enlace.</p>
         <ul id="listaLugares">
           <li>
             <a href="puente-medieval.html">Puente medieval
-              <img srcset="./img/destacadas/webp/puente-480w.webp,
-              ./img/destacadas/webp/puente-600w.webp 1.5x,
-              ./img/destacadas/webp/puente-800w.webp 2x"
-     src="./img/destacadas/webp/puente-800w.webp" alt="Imagen del puente medieval de St. Ives">
-              <!-- <img src="img/destacadas/webp/puente-800w.webp" alt="Imagen del puente medieval de St. Ives"> -->
+              <img
+                srcset="./img/destacadas/webp/puente-400w.webp 400w, ./img/destacadas/webp/puente-600w.webp 600w, ./img/destacadas/webp/puente-800w.webp 800w"
+                sizes="(max-width: 480px) 400px,
+                      (max-width: 768px) 600px,
+                      800px"
+                src="./img/destacadas/jpeg/puente.jpeg"
+                alt="Imagen del puente medieval de St. Ives" />
             </a>
-            
           </li>
           <li>
             <a href="estatua-oliver-cromwell.html">Estatua de <span lang="en">Oliver Cromwell</span>
-              <img src="img/destacadas/webp/estatua-cromwell-800w.webp" alt="Imagen de la estatua de Oliver Cromwell">
+              <img
+                srcset="./img/destacadas/webp/estatua-cromwell-400w.webp 400w, ./img/destacadas/webp/estatua-cromwell-600w.webp 600w, ./img/destacadas/webp/estatua-cromwell-800w.webp 800w"
+                sizes="(max-width: 480px) 400px,
+                      (max-width: 768px) 600px,
+                      800px"
+                src="./img/destacadas/jpeg/estatua-cromwell.jpeg"
+                alt="Imagen de la estatua de Oliver Cromwell" />
             </a>
           </li>
           <li>
             <a href="museo-norris.html">Museo Norris
-              <img src="img/museo-norris.jpg" alt="Imagen del Museo Norris">
+              <img
+                srcset="./img/destacadas/webp/museo-norris-400w.webp 400w, ./img/destacadas/webp/museo-norris-600w.webp 600w, ./img/destacadas/webp/museo-norris-800w.webp 800w"
+                sizes="(max-width: 480px) 400px,
+                      (max-width: 768px) 600px,
+                      800px"
+                src="./img/destacadas/jpeg/museo-norris.jpeg"
+                alt="Imagen del Museo Norris" />
             </a>
           </li>
           <li>
             <a href="iglesia-parroquial.html">Iglesia Parroquial de Todos los Santos
-              <img src="img/all-saints-church.jpg" alt="Imagen la Iglesia de Todos los Santos">
+              <img
+                srcset="./img/destacadas/webp/iglesia-400w.webp 400w, ./img/destacadas/webp/iglesia-600w.webp 600w, ./img/destacadas/webp/iglesia-800w.webp 800w"
+                sizes="(max-width: 480px) 400px,
+                      (max-width: 768px) 600px,
+                      800px"
+                src="./img/destacadas/jpeg/iglesia.jpeg"
+                alt="Imagen de la Iglesia de Todos los Santos" />
             </a>
           </li>
           <li>
             <a href="ayuntamiento.html">Ayuntamiento de <span lang="en">St. Ives</span>
-              <img src="img/ayuntamiento.jpg" alt="Imagen del Ayuntamiento de St. Ives">
+              <img
+                srcset="./img/destacadas/webp/ayuntamiento-400w.webp 400w, ./img/destacadas/webp/ayuntamiento-600w.webp 600w, ./img/destacadas/webp/ayuntamiento-800w.webp 800w"
+                sizes="(max-width: 480px) 400px,
+                      (max-width: 768px) 600px,
+                      800px"
+                src="./img/destacadas/jpeg/ayuntamiento.jpeg"
+                alt="Imagen del Ayuntamiento de St. Ives" />
             </a>
           </li>
           <li>
             <a href="reserva-isla-holt.html">Reserva Natural de <span lang="en">Holt Island</span>
-              <img src="img/puente-holt-island.jpeg" alt="Imagen de la entrada a la Reserva de Holt Island">
+              <img
+                srcset="./img/destacadas/webp/puente-holt-island-400w.webp 400w, ./img/destacadas/webp/puente-holt-island-600w.webp 600w, ./img/destacadas/webp/puente-holt-island-800w.webp 800w"
+                sizes="(max-width: 480px) 400px,
+                      (max-width: 768px) 600px,
+                      800px"
+                src="./img/destacadas/jpeg/puente-holt-island.jpeg"
+                alt="Imagen de la entrada a la reserva de Holt Island" />
             </a>
           </li>
         </ul>
