--- a/src/enlaces.html
+++ b/src/enlaces.html
@@ -53,13 +53,26 @@
         <h3>Imágenes</h3>
         <ul>
             <li>Fondo de página principal - Elaboración propia</li>
+            <li><a title="Enlace a imagen superpuesta en la página principal" href="https://www.geograph.org.uk/photo/6159637" target="_blank">Imagen superpuesta en página principal - Creative Commons</a></li>
             <li><a title="Enlace a imagen de The Quay" href="https://www.flickr.com/photos/kitmasterbloke/51886821362" target="_blank">Imagen de "Lugares de interés"- Creative Commons</a></li>
-            <li>Imagen de "Puente medieval" - Elaboración propia</li>
-            <li><a title="Enlace a imagen empleada de la estatua de Oliver Cromwell" href="https://www.flickr.com/photos/13706945@N00/10025476166/" target="_blank">Imagen de "Estatua de Oliver Cromwell"- Creative Commons</a></li>
-            <li><a title="Enlace a la imagen empleada del Museo Norris" href="https://www.britainexpress.com/counties/cambridgeshire/museums/norris.htm" target="_blank">Imagen del "Museo Norris" - Creative Commons</a></li>
-            <li><a title="Enlace a la imagen empleada de la Iglesia de Todos los Santos" href="https://www.stivesparishchurch.org.uk/images/church1.jpg" target="_blank">Imagen de "Iglesia Parroquial de Todos los Santos" - Creative Commons</a></li>
-            <li><a title="Enlace a la imagen empleada del Ayuntamiento" href="https://en.wikipedia.org/wiki/St_Ives_Town_Hall#/media/File:St_Ives_Town_Hall.jpg" target="_blank">Imagen de "Ayuntamiento" - Creative Commons</a></li>
-            <li><a title="Enlace a la imagen empleada de Holt Island" href="https://www.geograph.org.uk/photo/3703782" target="_blank">Imagen de "Reserva Natural Holt Island" - Creative Commons</a></li>
+            <li>Imagen destacada "Puente medieval" - Elaboración propia</li>
+            <li><a title="Enlace a la primera imagen interna del Puente Medieval" href="https://www.geograph.org.uk/photo/411438" target="_blank">Imagen interna 1 de "Puente medieval" - Creative Commons</a></li>
+            <li><a title="Enlace a la segunda imagen interna del Puente Medieval" href="https://www.flickr.com/photos/anemoneprojectors/22440931591" target="_blank">Imagen interna 2 de "Puente medieval" - Creative Commons</a></li>
+            <li><a title="Enlace a imagen destacada de la estatua de Oliver Cromwell" href="https://www.flickr.com/photos/13706945@N00/10025476166/" target="_blank">Imagen destacada de "Estatua de Oliver Cromwell"- Creative Commons</a></li>
+            <li>Imagen interna 1 de "Oliver Cromwell" - Elaboración propia</li>
+            <li><a title="Enlace a la segunda imagen interna de Oliver Cromwell" href="https://creazilla.com/nodes/7327637-portrait-of-oliver-cromwell-1599-1658-lord-protector-of-england-by-studio-of-rob" target="_blank">Imagen interna 2 de "Oliver Cromwell" - Creative Commons</a></li>
+            <li>Imagen destacada de "Museo Norris" - Elaboración propia</li>
+            <li><a title="Enlace a la primera imagen interna de Museo Norris" href="https://commons.wikimedia.org/wiki/File:Godmanchester_to_St_Ives_158_The_Norris_Library_and_Museum,_St_Ives_%2821916232124%29.jpg" target="_blank">Imagen interna 1 de "Museo Norris" - Creative Commons</a></li>
+            <li>Imagen interna 2 de "Museo Norris" - Elaboración propia</li>
+            <li>Imagen destacada de "Iglesia Parroquial de Todos los Santos" - Elaboración propia</li>
+            <li><a title="Enlace a la primera imagen interna de Iglesia Parroquial de Todos los Santos" href="https://www.geograph.org.uk/photo/2551036" target="_blank">Imagen interna 1 de "Iglesia Parroquial de Todos los Santos" - Creative Commons</a></li>
+            <li>Imagen interna 2 de "Iglesia Parroquial de Todos los Santos" - Elaboración propia</li>
+            <li>Imagen destacada de "Ayuntamiento" - Elaboración propia</li>
+            <li>Imagen interna 1 de "Ayuntamiento" - Elaboración propia</li>
+            <li>Imagen interna 2 de "Ayuntamiento" - Elaboración propia</li>
+            <li><a title="Enlace a la imagen destacada de Holt Island" href="https://www.geograph.org.uk/photo/3703782" target="_blank">Imagen destacada de "Reserva Natural Holt Island" - Creative Commons</a></li>
+            <li>Imagen interna 1 de "Holt Island" - Elaboración propia</li>
+            <li>Imagen interna 2 de "Holt Island" - Elaboración propia</li>
         </ul>
         <h3>Vídeos</h3>
         <ul>
