Se añaden el header y footer definitivos a todas las páginas y la transición para el logo de header

--- a/src/presentacion.html
+++ b/src/presentacion.html
@@ -17,13 +17,14 @@
     <!-- Cabecera -->
     <header>
       <div class="container">
-          <div>
-          <a href="index.html">
-              <h1 class="banner" lang="en">
-                <span>St. Ives</span> The Old Riverport
-              </h1>
+        <div>
+          <a href="index.html" class="logo-link">
+            <img src="./img/logo.svg" alt="Logo de St. Ives" class="logo-img">
+            <h1 class="banner" lang="en">
+              <span>St. Ives</span> The Old Riverport
+            </h1>
           </a>
-          </div>
+        </div>
           <!-- Menú -->
           <nav>
               <ul>
@@ -84,9 +85,16 @@
 
     <!-- Footer -->
     <footer class="textoCentrado">
-      <p>Herramientas HTML y CSS</p>
-      <p>Actividad realizada por Sergio Forja Barriga</p>
-      <a href="https://www.uoc.edu/portal/es/index.html" target="_blank"><img src="img/uoc.png" alt="Logo de la UOC"></a>
+      <ul>
+        <li><a href="presentacion.html">Presentación</a></li>
+        <li><a href="lugares-interes.html">Lugares de interés</a></li>
+        <li><a href="enlaces.html">Enlaces</a></li>
+      </ul>
+      <div>
+        <p>Herramientas HTML y CSS</p>
+        <p>Actividad realizada por Sergio Forja Barriga</p>
+        <a href="https://www.uoc.edu/portal/es/index.html" target="_blank"><img src="img/uoc.png" alt="Logo de la UOC"></a>
+      </div>
     </footer>
 
     <script type="module" src="js/poblacion.js"></script>
