--- a/src/enlaces.html
+++ b/src/enlaces.html
@@ -17,13 +17,14 @@
     <!-- Cabecera -->
     <header>
         <div class="container">
-            <div>
-            <a href="index.html">
-                <h1 class="banner">
+          <div>
+            <a href="index.html" class="logo-link">
+              <img src="./img/logo.svg" alt="Logo de St. Ives" class="logo-img">
+              <h1 class="banner" lang="en">
                 <span>St. Ives</span> The Old Riverport
-                </h1>
+              </h1>
             </a>
-            </div>
+          </div>
             <!-- Menú -->
             <nav>
                 <ul>
@@ -85,9 +86,16 @@
 
     <!-- Footer -->
     <footer class="textoCentrado">
+      <ul>
+        <li><a href="presentacion.html">Presentación</a></li>
+        <li><a href="lugares-interes.html">Lugares de interés</a></li>
+        <li><a href="enlaces.html">Enlaces</a></li>
+      </ul>
+      <div>
         <p>Herramientas HTML y CSS</p>
         <p>Actividad realizada por Sergio Forja Barriga</p>
         <a href="https://www.uoc.edu/portal/es/index.html" target="_blank"><img src="img/uoc.png" alt="Logo de la UOC"></a>
-      </footer>
+      </div>
+    </footer>
   </body>
 </html>
