--- a/src/lugares-interes.html
+++ b/src/lugares-interes.html
@@ -17,7 +17,8 @@
     <header>
       <div class="container">
         <div>
-          <a href="index.html">
+          <a href="index.html" class="logo-link">
+            <img src="./img/logo.svg" alt="Logo de St. Ives" class="logo-img">
             <h1 class="banner" lang="en">
               <span>St. Ives</span> The Old Riverport
             </h1>
@@ -120,9 +121,16 @@
 
     <!-- Footer -->
     <footer class="textoCentrado">
-      <p>Herramientas HTML y CSS</p>
-      <p>Actividad realizada por Sergio Forja Barriga</p>
-      <a href="https://www.uoc.edu/portal/es/index.html" target="_blank"><img src="img/uoc.png" alt="Logo de la UOC"></a>
+      <ul>
+        <li><a href="presentacion.html">Presentación</a></li>
+        <li><a href="lugares-interes.html">Lugares de interés</a></li>
+        <li><a href="enlaces.html">Enlaces</a></li>
+      </ul>
+      <div>
+        <p>Herramientas HTML y CSS</p>
+        <p>Actividad realizada por Sergio Forja Barriga</p>
+        <a href="https://www.uoc.edu/portal/es/index.html" target="_blank"><img src="img/uoc.png" alt="Logo de la UOC"></a>
+      </div>
     </footer>
   </body>
 </html>
