Se modifican atributos src y añadimos configuración para Sharp

--- a/src/ayuntamiento.html
+++ b/src/ayuntamiento.html
@@ -85,7 +85,8 @@
             sizes="(max-width: 480px) 150px,
                   (max-width: 768px) 225px,
                   350px"
-            alt="Hall de entrada al Ayuntamiento" />
+            src="./img/internas/ayuntamiento-1-350w.jpeg"
+            alt="Hall de entrada al Ayuntamiento" >
             <figcaption>Hall de entrada al Ayuntamiento</figcaption>
           </figure>
           <figure>
@@ -94,7 +95,8 @@
             sizes="(max-width: 480px) 150px,
                   (max-width: 768px) 225px,
                     350px"
-            alt="Vista del Ayuntamiento tras el mercado" />
+            src="./img/internas/ayuntamiento-2-350w.jpeg"
+            alt="Vista del Ayuntamiento tras el mercado" >
             <figcaption>Vista del Ayuntamiento tras el mercado</figcaption>
           </figure>
         </div>
