--- a/src/estatua-oliver-cromwell.html
+++ b/src/estatua-oliver-cromwell.html
@@ -80,7 +80,8 @@
             sizes="(max-width: 480px) 150px,
                   (max-width: 768px) 225px,
                   350px"
-            alt="Vista lateral de la estatua de Oliver Cromwell" />
+            src="./img/internas/oliver-cromwell-1-350w.jpeg"
+            alt="Vista lateral de la estatua de Oliver Cromwell" >
             <figcaption>Vista lateral de la estatua</figcaption>
           </figure>
           <figure>
@@ -89,7 +90,8 @@
             sizes="(max-width: 480px) 150px,
                   (max-width: 768px) 225px,
                     350px"
-            alt="Retrato de Oliver Cromwell" />
+            src="./img/internas/oliver-cromwell-2-350w.jpeg"
+            alt="Retrato de Oliver Cromwell" >
             <figcaption>Retrato de Oliver Cromwell</figcaption>
           </figure>
         </div>
