--- a/src/iglesia-parroquial.html
+++ b/src/iglesia-parroquial.html
@@ -84,7 +84,8 @@
             sizes="(max-width: 480px) 150px,
                   (max-width: 768px) 225px,
                   350px"
-            alt="Foto del interior de la iglesia" />
+            src="./img/internas/iglesia-1-350w.jpeg"
+            alt="Foto del interior de la iglesia" >
             <figcaption>Foto del interior de la iglesia</figcaption>
           </figure>
           <figure>
@@ -93,7 +94,8 @@
             sizes="(max-width: 480px) 150px,
                   (max-width: 768px) 225px,
                   350px"
-            alt="Acceso al recinto de la iglesia" />
+            src="./img/internas/iglesia-2-350w.jpeg"
+            alt="Acceso al recinto de la iglesia" >
             <figcaption>Acceso al recinto de la iglesia</figcaption>
           </figure>          
         </div>
