--- a/src/lugares-interes.html
+++ b/src/lugares-interes.html
@@ -44,7 +44,7 @@
           <img
             srcset="./img/miniaturas/the-quay-600w.webp, ./img/miniaturas/the-quay-800w.webp 2x"
             src="./img/miniaturas/the-quay-800w.jpeg"
-            alt="Imagen del paseo The Quay" />
+            alt="Imagen del paseo The Quay" >
           <figcaption>Paseo <span lang="en">"The Quay"</span>, junto al río</figcaption>
         </figure>
         <p>A continuación dispone de un listado con los lugares más pintorescos de <span lang="en">St. Ives</span>. Para conocer más acerca de ellos, pulse en el enlace.</p>
@@ -57,7 +57,7 @@
                       (max-width: 768px) 600px,
                       800px"
                 src="./img/destacadas/jpeg/puente.jpeg"
-                alt="Imagen del puente medieval de St. Ives" />
+                alt="Imagen del puente medieval de St. Ives" >
             </a>
           </li>
           <li>
@@ -68,7 +68,7 @@
                       (max-width: 768px) 600px,
                       800px"
                 src="./img/destacadas/jpeg/estatua-cromwell.jpeg"
-                alt="Imagen de la estatua de Oliver Cromwell" />
+                alt="Imagen de la estatua de Oliver Cromwell" >
             </a>
           </li>
           <li>
@@ -79,7 +79,7 @@
                       (max-width: 768px) 600px,
                       800px"
                 src="./img/destacadas/jpeg/museo-norris.jpeg"
-                alt="Imagen del Museo Norris" />
+                alt="Imagen del Museo Norris" >
             </a>
           </li>
           <li>
@@ -90,7 +90,7 @@
                       (max-width: 768px) 600px,
                       800px"
                 src="./img/destacadas/jpeg/iglesia.jpeg"
-                alt="Imagen de la Iglesia de Todos los Santos" />
+                alt="Imagen de la Iglesia de Todos los Santos" >
             </a>
           </li>
           <li>
@@ -101,7 +101,7 @@
                       (max-width: 768px) 600px,
                       800px"
                 src="./img/destacadas/jpeg/ayuntamiento.jpeg"
-                alt="Imagen del Ayuntamiento de St. Ives" />
+                alt="Imagen del Ayuntamiento de St. Ives" >
             </a>
           </li>
           <li>
@@ -112,7 +112,7 @@
                       (max-width: 768px) 600px,
                       800px"
                 src="./img/destacadas/jpeg/puente-holt-island.jpeg"
-                alt="Imagen de la entrada a la reserva de Holt Island" />
+                alt="Imagen de la entrada a la reserva de Holt Island" >
             </a>
           </li>
         </ul>
