--- a/src/museo-norris.html
+++ b/src/museo-norris.html
@@ -83,7 +83,8 @@
             sizes="(max-width: 480px) 150px,
                   (max-width: 768px) 225px,
                   350px"
-            alt="Jardín del museo" />
+            src="./img/internas/museo-norris-1-350w.jpeg"
+            alt="Jardín del museo" >
             <figcaption>Jardín del museo</figcaption>
           </figure>
           <figure>
@@ -92,7 +93,8 @@
             sizes="(max-width: 480px) 150px,
                   (max-width: 768px) 225px,
                   350px"
-            alt="Interior del museo" />
+            src="./img/internas/museo-norris-2-350w.jpeg"
+            alt="Interior del museo" >
             <figcaption>Interior del museo</figcaption>
           </figure>          
         </div>
