--- a/src/puente-medieval.html
+++ b/src/puente-medieval.html
@@ -49,7 +49,7 @@
         </ul>
         <h2 class="textoCentrado">Puente medieval</h2>
         <figure>
-          <picture class="animation-container" transition-style="in:circle:center">
+          <picture>
             <source media="(max-width: 480px)" srcset="./img/destacadas/webp/puente-400w.webp">
             <source media="(max-width: 768px)" srcset="./img/destacadas/webp/puente-600w.webp">
             <source media="(min-width: 769px)" srcset="./img/destacadas/webp/puente-800w.webp">
@@ -83,7 +83,8 @@
             sizes="(max-width: 480px) 150px,
                   (max-width: 768px) 225px,
                   350px"
-            alt="Foto nocturna del puente medieval de St. Ives" />
+            src="./img/internas/puente-1-350w.jpeg"
+            alt="Foto nocturna del puente medieval de St. Ives" >
             <figcaption>Foto nocturna del puente medieval de St. Ives</figcaption>
           </figure>
           <figure>
@@ -92,7 +93,8 @@
             sizes="(max-width: 480px) 150px,
                   (max-width: 768px) 225px,
                   350px"
-            alt="Vista de la calzada sobre el puente" />
+            src="./img/internas/puente-2-350w.jpeg"
+            alt="Vista de la calzada sobre el puente" >
             <figcaption>Vista de la calzada sobre el puente</figcaption>
           </figure>          
         </div>
