--- a/src/reserva-isla-holt.html
+++ b/src/reserva-isla-holt.html
@@ -81,7 +81,8 @@
             sizes="(max-width: 480px) 150px,
                   (max-width: 768px) 225px,
                   350px"
-            alt="Imagen de una garza" />
+            src="./img/internas/holt-island-1-350w.jpeg"
+            alt="Imagen de una garza" >
             <figcaption>Imagen de una garza</figcaption>
           </figure>
           <figure>
@@ -90,7 +91,8 @@
             sizes="(max-width: 480px) 150px,
                   (max-width: 768px) 225px,
                   350px"
-            alt="Foto de un zorro" />
+            src="./img/internas/holt-island-2-350w.jpeg"
+            alt="Foto de un zorro" >
             <figcaption>Foto de un zorro</figcaption>
           </figure>          
         </div>
