Se sustituye imagen interna de Museo Norris

--- a/src/enlaces.html
+++ b/src/enlaces.html
@@ -63,7 +63,7 @@
             <li>Imagen interna 1 de "Oliver Cromwell" - Elaboración propia</li>
             <li><a title="Enlace a la segunda imagen interna de Oliver Cromwell" href="https://creazilla.com/nodes/7327637-portrait-of-oliver-cromwell-1599-1658-lord-protector-of-england-by-studio-of-rob" target="_blank">Imagen interna 2 de "Oliver Cromwell" - Creative Commons</a></li>
             <li>Imagen destacada de "Museo Norris" - Elaboración propia</li>
-            <li><a title="Enlace a la primera imagen interna de Museo Norris" href="https://upload.wikimedia.org/wikipedia/commons/7/76/Godmanchester_to_St_Ives_158_The_Norris_Library_and_Museum%2C_St_Ives_%2821916232124%29.jpg" target="_blank">Imagen interna 1 de "Museo Norris" - Creative Commons</a></li>
+            <li>Imagen interna 1 de "Museo Norris" - Elaboración propia</li>
             <li>Imagen interna 2 de "Museo Norris" - Elaboración propia</li>
             <li>Imagen destacada de "Iglesia Parroquial de Todos los Santos" - Elaboración propia</li>
             <li><a title="Enlace a la primera imagen interna de Iglesia Parroquial de Todos los Santos" href="https://www.geograph.org.uk/photo/2551036" target="_blank">Imagen interna 1 de "Iglesia Parroquial de Todos los Santos" - Creative Commons</a></li>
