Modificación de figcaption de una imagen y se eliimina etiqueta a sobrante

--- a/src/museo-norris.html
+++ b/src/museo-norris.html
@@ -85,7 +85,7 @@
                   350px"
             src="./img/internas/museo-norris-1-350w.jpeg"
             alt="Jardín del museo" >
-            <figcaption>Jardín del museo</figcaption>
+            <figcaption>Acceso al museo</figcaption>
           </figure>
           <figure>
             <img
