--- a/src/puente-medieval.html
+++ b/src/puente-medieval.html
@@ -73,7 +73,7 @@
         </p>
         <p>
             En algún momento, la capilla del puente cayó en desuso y durante un tiempo se utilizó como casa de prostitución durante el siglo XVIII. Ya en 1930, 
-            se descubrió que la estructura estaba debilitada, por lo que se quitaron los pisos adicionales y se restauró la capilla, que en la actualidad se ha vuelto <a href=""></a>
+            se descubrió que la estructura estaba debilitada, por lo que se quitaron los pisos adicionales y se restauró la capilla, que en la actualidad se ha vuelto a
             utilizar para el culto público de forma ocasional.
         </p>        
         <div id="imgInternas">
