Modificación en tabulado de estilos y en el formato de una imagen de página interna

--- a/src/estatua-oliver-cromwell.html
+++ b/src/estatua-oliver-cromwell.html
@@ -86,11 +86,11 @@
           </figure>
           <figure>
             <img
-            srcset="./img/internas/oliver-cromwell-2-150w.jpeg 150w, ./img/internas/oliver-cromwell-2-225w.jpeg 225w, ./img/internas/oliver-cromwell-2-350w.jpeg 350w"
+            srcset="./img/internas/oliver-cromwell-2-150w.png 150w, ./img/internas/oliver-cromwell-2-225w.png 225w, ./img/internas/oliver-cromwell-2-350w.png 350w"
             sizes="(max-width: 480px) 150px,
                   (max-width: 768px) 225px,
                     350px"
-            src="./img/internas/oliver-cromwell-2-350w.jpeg"
+            src="./img/internas/oliver-cromwell-2-350w.png"
             alt="Retrato de Oliver Cromwell" >
             <figcaption>Retrato de Oliver Cromwell</figcaption>
           </figure>
